Fixed alignment issue with BackgroundPage.

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@
 }
 
 .section-header {
-    margin-bottom: 40px;
+    margin-bottom: 30px;
+    margin-top: 40px;
     text-align: center;
     font-size: 28px;
     font-weight: 600;
